force-app/main/default/objects/Account/fields/ActiveHealthLicenseFlag__c.field-meta.xml
<CustomField>
    <fullName>ActiveHealthLicenseFlag__c</fullName>
    <description>Field indicates if Agency is Active. Consider only records set &apos;Y&apos;.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Active Health License Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>