force-app/main/default/objects/Account/fields/Applicable_Roles__c.field-meta.xml
<CustomField>
    <fullName>Applicable_Roles__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Applicable Roles</label>
    <type>TextArea</type>
</CustomField>