force-app/main/default/objects/Account/fields/AssociatedPrograms__c.field-meta.xml
<CustomField>
    <fullName>AssociatedPrograms__c</fullName>
    <description>All program codes, Organization is supporting will be stored as a comma seperated string. Example MA,KT,SN,KP,CC.</description>
    <label>Associated Programs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BenefitPrograms</valueSetName>
    </valueSet>
</CustomField>