force-app/main/default/objects/Account/fields/BilingZipExtension__c.field-meta.xml
<CustomField>
    <fullName>BilingZipExtension__c</fullName>
    <description>Zip Extension for Billing Address</description>
    <label>BilingZipExtension</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>