force-app/main/default/objects/Account/fields/BillingLine2__c.field-meta.xml
<CustomField>
    <fullName>BillingLine2__c</fullName>
    <description>Agent Organization BusinessAddressLine2</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Billing Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>