force-app/main/default/objects/Account/fields/CaseNumber__c.field-meta.xml
<CustomField>
    <fullName>CaseNumber__c</fullName>
    <description>This field is used to store CaseNumber associated for an authorised representative</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>CaseNumber</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>