force-app/main/default/objects/Account/fields/CommonlyUsedName__c.field-meta.xml
<CustomField>
    <fullName>CommonlyUsedName__c</fullName>
    <description>Commonly Used Name of the account which could be different from the Account Name</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Commonly Used Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>