force-app/main/default/objects/Account/fields/CountyServed__c.field-meta.xml
<CustomField>
    <fullName>CountyServed__c</fullName>
    <description>List of Counties in the Kentucky state which the account serves</description>
    <label>County Served</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Adair</fullName>
                
                
                    <label>Adair</label>
                
                </value>
            
                <value>
                
                    <fullName>Allen</fullName>
                
                
                    <label>Allen</label>
                
                </value>
            
                <value>
                
                    <fullName>Anderson</fullName>
                
                
                    <label>Anderson</label>
                
                </value>
            
                <value>
                
                    <fullName>Ballard</fullName>
                
                
                    <label>Ballard</label>
                
                </value>
            
                <value>
                
                    <fullName>Barren</fullName>
                
                
                    <label>Barren</label>
                
                </value>
            
                <value>
                
                    <fullName>Bath</fullName>
                
                
                    <label>Bath</label>
                
                </value>
            
                <value>
                
                    <fullName>Boone</fullName>
                
                
                    <label>Boone</label>
                
                </value>
            
                <value>
                
                    <fullName>Bourbon</fullName>
                
                
                    <label>Bourbon</label>
                
                </value>
            
                <value>
                
                    <fullName>Boyd</fullName>
                
                
                    <label>Boyd</label>
                
                </value>
            
                <value>
                
                    <fullName>Boyle</fullName>
                
                
                    <label>Boyle</label>
                
                </value>
            
                <value>
                
                    <fullName>Bracken</fullName>
                
                
                    <label>Bracken</label>
                
                </value>
            
                <value>
                
                    <fullName>Breathitt</fullName>
                
                
                    <label>Breathitt</label>
                
                </value>
            
                <value>
                
                    <fullName>Breckinridge</fullName>
                
                
                    <label>Breckinridge</label>
                
                </value>
            
                <value>
                
                    <fullName>Bullitt</fullName>
                
                
                    <label>Bullitt</label>
                
                </value>
            
                <value>
                
                    <fullName>Butler</fullName>
                
                
                    <label>Butler</label>
                
                </value>
            
                <value>
                
                    <fullName>Caldwell</fullName>
                
                
                    <label>Caldwell</label>
                
                </value>
            
                <value>
                
                    <fullName>Calloway</fullName>
                
                
                    <label>Calloway</label>
                
                </value>
            
                <value>
                
                    <fullName>Campbell</fullName>
                
                
                    <label>Campbell</label>
                
                </value>
            
                <value>
                
                    <fullName>Carlisle</fullName>
                
                
                    <label>Carlisle</label>
                
                </value>
            
                <value>
                
                    <fullName>Carroll</fullName>
                
                
                    <label>Carroll</label>
                
                </value>
            
                <value>
                
                    <fullName>Carter</fullName>
                
                
                    <label>Carter</label>
                
                </value>
            
                <value>
                
                    <fullName>Casey</fullName>
                
                
                    <label>Casey</label>
                
                </value>
            
                <value>
                
                    <fullName>Christian</fullName>
                
                
                    <label>Christian</label>
                
                </value>
            
                <value>
                
                    <fullName>Clark</fullName>
                
                
                    <label>Clark</label>
                
                </value>
            
                <value>
                
                    <fullName>Clay</fullName>
                
                
                    <label>Clay</label>
                
                </value>
            
                <value>
                
                    <fullName>Clinton</fullName>
                
                
                    <label>Clinton</label>
                
                </value>
            
                <value>
                
                    <fullName>Crittenden</fullName>
                
                
                    <label>Crittenden</label>
                
                </value>
            
                <value>
                
                    <fullName>Cumberland</fullName>
                
                
                    <label>Cumberland</label>
                
                </value>
            
                <value>
                
                    <fullName>Daviess</fullName>
                
                
                    <label>Daviess</label>
                
                </value>
            
                <value>
                
                    <fullName>Edmonson</fullName>
                
                
                    <label>Edmonson</label>
                
                </value>
            
                <value>
                
                    <fullName>Elliott</fullName>
                
                
                    <label>Elliott</label>
                
                </value>
            
                <value>
                
                    <fullName>Estill</fullName>
                
                
                    <label>Estill</label>
                
                </value>
            
                <value>
                
                    <fullName>Fayette</fullName>
                
                
                    <label>Fayette</label>
                
                </value>
            
                <value>
                
                    <fullName>Fleming</fullName>
                
                
                    <label>Fleming</label>
                
                </value>
            
                <value>
                
                    <fullName>Floyd</fullName>
                
                
                    <label>Floyd</label>
                
                </value>
            
                <value>
                
                    <fullName>Franklin</fullName>
                
                
                    <label>Franklin</label>
                
                </value>
            
                <value>
                
                    <fullName>Fulton</fullName>
                
                
                    <label>Fulton</label>
                
                </value>
            
                <value>
                
                    <fullName>Gallatin</fullName>
                
                
                    <label>Gallatin</label>
                
                </value>
            
                <value>
                
                    <fullName>Garrard</fullName>
                
                
                    <label>Garrard</label>
                
                </value>
            
                <value>
                
                    <fullName>Grant</fullName>
                
                
                    <label>Grant</label>
                
                </value>
            
                <value>
                
                    <fullName>Graves</fullName>
                
                
                    <label>Graves</label>
                
                </value>
            
                <value>
                
                    <fullName>Grayson</fullName>
                
                
                    <label>Grayson</label>
                
                </value>
            
                <value>
                
                    <fullName>Green</fullName>
                
                
                    <label>Green</label>
                
                </value>
            
                <value>
                
                    <fullName>Greenup</fullName>
                
                
                    <label>Greenup</label>
                
                </value>
            
                <value>
                
                    <fullName>Hancock</fullName>
                
                
                    <label>Hancock</label>
                
                </value>
            
                <value>
                
                    <fullName>Hardin</fullName>
                
                
                    <label>Hardin</label>
                
                </value>
            
                <value>
                
                    <fullName>Harlan</fullName>
                
                
                    <label>Harlan</label>
                
                </value>
            
                <value>
                
                    <fullName>Harrison</fullName>
                
                
                    <label>Harrison</label>
                
                </value>
            
                <value>
                
                    <fullName>Hart</fullName>
                
                
                    <label>Hart</label>
                
                </value>
            
                <value>
                
                    <fullName>Henderson</fullName>
                
                
                    <label>Henderson</label>
                
                </value>
            
                <value>
                
                    <fullName>Henry</fullName>
                
                
                    <label>Henry</label>
                
                </value>
            
                <value>
                
                    <fullName>Hickman</fullName>
                
                
                    <label>Hickman</label>
                
                </value>
            
                <value>
                
                    <fullName>Hopkins</fullName>
                
                
                    <label>Hopkins</label>
                
                </value>
            
                <value>
                
                    <fullName>Jackson</fullName>
                
                
                    <label>Jackson</label>
                
                </value>
            
                <value>
                
                    <fullName>Jefferson</fullName>
                
                
                    <label>Jefferson</label>
                
                </value>
            
                <value>
                
                    <fullName>Jessamine</fullName>
                
                
                    <label>Jessamine</label>
                
                </value>
            
                <value>
                
                    <fullName>Johnson</fullName>
                
                
                    <label>Johnson</label>
                
                </value>
            
                <value>
                
                    <fullName>Kenton</fullName>
                
                
                    <label>Kenton</label>
                
                </value>
            
                <value>
                
                    <fullName>Knott</fullName>
                
                
                    <label>Knott</label>
                
                </value>
            
                <value>
                
                    <fullName>Knox</fullName>
                
                
                    <label>Knox</label>
                
                </value>
            
                <value>
                
                    <fullName>LaRue</fullName>
                
                
                    <label>LaRue</label>
                
                </value>
            
                <value>
                
                    <fullName>Laurel</fullName>
                
                
                    <label>Laurel</label>
                
                </value>
            
                <value>
                
                    <fullName>Lawrence</fullName>
                
                
                    <label>Lawrence</label>
                
                </value>
            
                <value>
                
                    <fullName>Lee</fullName>
                
                
                    <label>Lee</label>
                
                </value>
            
                <value>
                
                    <fullName>Leslie</fullName>
                
                
                    <label>Leslie</label>
                
                </value>
            
                <value>
                
                    <fullName>Letcher</fullName>
                
                
                    <label>Letcher</label>
                
                </value>
            
                <value>
                
                    <fullName>Lewis</fullName>
                
                
                    <label>Lewis</label>
                
                </value>
            
                <value>
                
                    <fullName>Lincoln</fullName>
                
                
                    <label>Lincoln</label>
                
                </value>
            
                <value>
                
                    <fullName>Livingston</fullName>
                
                
                    <label>Livingston</label>
                
                </value>
            
                <value>
                
                    <fullName>Logan</fullName>
                
                
                    <label>Logan</label>
                
                </value>
            
                <value>
                
                    <fullName>Lyon</fullName>
                
                
                    <label>Lyon</label>
                
                </value>
            
                <value>
                
                    <fullName>Madison</fullName>
                
                
                    <label>Madison</label>
                
                </value>
            
                <value>
                
                    <fullName>Magoffin</fullName>
                
                
                    <label>Magoffin</label>
                
                </value>
            
                <value>
                
                    <fullName>Marion</fullName>
                
                
                    <label>Marion</label>
                
                </value>
            
                <value>
                
                    <fullName>Marshall</fullName>
                
                
                    <label>Marshall</label>
                
                </value>
            
                <value>
                
                    <fullName>Martin</fullName>
                
                
                    <label>Martin</label>
                
                </value>
            
                <value>
                
                    <fullName>Mason</fullName>
                
                
                    <label>Mason</label>
                
                </value>
            
                <value>
                
                    <fullName>McCracken</fullName>
                
                
                    <label>McCracken</label>
                
                </value>
            
                <value>
                
                    <fullName>McCreary</fullName>
                
                
                    <label>McCreary</label>
                
                </value>
            
                <value>
                
                    <fullName>McLean</fullName>
                
                
                    <label>McLean</label>
                
                </value>
            
                <value>
                
                    <fullName>Meade</fullName>
                
                
                    <label>Meade</label>
                
                </value>
            
                <value>
                
                    <fullName>Menifee</fullName>
                
                
                    <label>Menifee</label>
                
                </value>
            
                <value>
                
                    <fullName>Mercer</fullName>
                
                
                    <label>Mercer</label>
                
                </value>
            
                <value>
                
                    <fullName>Metcalfe</fullName>
                
                
                    <label>Metcalfe</label>
                
                </value>
            
                <value>
                
                    <fullName>Monroe</fullName>
                
                
                    <label>Monroe</label>
                
                </value>
            
                <value>
                
                    <fullName>Montgomery</fullName>
                
                
                    <label>Montgomery</label>
                
                </value>
            
                <value>
                
                    <fullName>Morgan</fullName>
                
                
                    <label>Morgan</label>
                
                </value>
            
                <value>
                
                    <fullName>Muhlenberg</fullName>
                
                
                    <label>Muhlenberg</label>
                
                </value>
            
                <value>
                
                    <fullName>Nelson</fullName>
                
                
                    <label>Nelson</label>
                
                </value>
            
                <value>
                
                    <fullName>Nicholas</fullName>
                
                
                    <label>Nicholas</label>
                
                </value>
            
                <value>
                
                    <fullName>Ohio</fullName>
                
                
                    <label>Ohio</label>
                
                </value>
            
                <value>
                
                    <fullName>Oldham</fullName>
                
                
                    <label>Oldham</label>
                
                </value>
            
                <value>
                
                    <fullName>Owen</fullName>
                
                
                    <label>Owen</label>
                
                </value>
            
                <value>
                
                    <fullName>Owsley</fullName>
                
                
                    <label>Owsley</label>
                
                </value>
            
                <value>
                
                    <fullName>Pendleton</fullName>
                
                
                    <label>Pendleton</label>
                
                </value>
            
                <value>
                
                    <fullName>Perry</fullName>
                
                
                    <label>Perry</label>
                
                </value>
            
                <value>
                
                    <fullName>Pike</fullName>
                
                
                    <label>Pike</label>
                
                </value>
            
                <value>
                
                    <fullName>Powell</fullName>
                
                
                    <label>Powell</label>
                
                </value>
            
                <value>
                
                    <fullName>Pulaski</fullName>
                
                
                    <label>Pulaski</label>
                
                </value>
            
                <value>
                
                    <fullName>Robertson</fullName>
                
                
                    <label>Robertson</label>
                
                </value>
            
                <value>
                
                    <fullName>Rockcastle</fullName>
                
                
                    <label>Rockcastle</label>
                
                </value>
            
                <value>
                
                    <fullName>Rowan</fullName>
                
                
                    <label>Rowan</label>
                
                </value>
            
                <value>
                
                    <fullName>Russell</fullName>
                
                
                    <label>Russell</label>
                
                </value>
            
                <value>
                
                    <fullName>Scott</fullName>
                
                
                    <label>Scott</label>
                
                </value>
            
                <value>
                
                    <fullName>Shelby</fullName>
                
                
                    <label>Shelby</label>
                
                </value>
            
                <value>
                
                    <fullName>Simpson</fullName>
                
                
                    <label>Simpson</label>
                
                </value>
            
                <value>
                
                    <fullName>Spencer</fullName>
                
                
                    <label>Spencer</label>
                
                </value>
            
                <value>
                
                    <fullName>Taylor</fullName>
                
                
                    <label>Taylor</label>
                
                </value>
            
                <value>
                
                    <fullName>Todd</fullName>
                
                
                    <label>Todd</label>
                
                </value>
            
                <value>
                
                    <fullName>Trigg</fullName>
                
                
                    <label>Trigg</label>
                
                </value>
            
                <value>
                
                    <fullName>Trimble</fullName>
                
                
                    <label>Trimble</label>
                
                </value>
            
                <value>
                
                    <fullName>Union</fullName>
                
                
                    <label>Union</label>
                
                </value>
            
                <value>
                
                    <fullName>Warren</fullName>
                
                
                    <label>Warren</label>
                
                </value>
            
                <value>
                
                    <fullName>Washington</fullName>
                
                
                    <label>Washington</label>
                
                </value>
            
                <value>
                
                    <fullName>Wayne</fullName>
                
                
                    <label>Wayne</label>
                
                </value>
            
                <value>
                
                    <fullName>Webster</fullName>
                
                
                    <label>Webster</label>
                
                </value>
            
                <value>
                
                    <fullName>Whitley</fullName>
                
                
                    <label>Whitley</label>
                
                </value>
            
                <value>
                
                    <fullName>Wolfe</fullName>
                
                
                    <label>Wolfe</label>
                
                </value>
            
                <value>
                
                    <fullName>Woodford</fullName>
                
                
                    <label>Woodford</label>
                
                </value>
            
                <value>
                
                    <fullName>Hamilton</fullName>
                
                
                    <label>Hamilton</label>
                
                </value>
            
                <value>
                
                    <fullName>Obion</fullName>
                
                
                    <label>Obion</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>