force-app/main/default/objects/Account/fields/DCDataId__c.field-meta.xml
<CustomField>
    <fullName>DCDataId__c</fullName>
    <description>Mapped to Application.AgentAssisterAssociation.AgencyId field in SSP-DC. Field is used as lookup id on DCAgencyEmployee table.</description>
    <label>DC Data Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>