force-app/main/default/objects/Account/fields/Facebook__c.field-meta.xml
<CustomField>
    <fullName>Facebook__c</fullName>
    <description>URL of organization&apos;s facebook page</description>
    <label>Facebook</label>
    <type>Url</type>
</CustomField>