force-app/main/default/objects/Account/fields/HasOptedOutOfAccount__c.field-meta.xml
<CustomField>
    <fullName>HasOptedOutOfAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OptOutInfoSharing</label>
    <type>Checkbox</type>
</CustomField>