force-app/main/default/objects/Account/fields/Instructions__c.field-meta.xml
<CustomField>
    <fullName>Instructions__c</fullName>
    <description>Description of what&apos;s required to receive services (set an appointment, call for more info, bring this paperwork, etc) Ex: youth under 18, medicaid recipients eligible</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>