force-app/main/default/objects/Account/fields/Is_CP_Organization__c.field-meta.xml
<CustomField>
    <fullName>Is_CP_Organization__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to identify Community partner organizations for RE</description>
    <label>Is CP Organization</label>
    <type>Checkbox</type>
</CustomField>