force-app/main/default/objects/Account/fields/IsClaimed__c.field-meta.xml
<CustomField>
    <fullName>IsClaimed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to indicate if an Account partner is a KY Partner or not.</description>
    <label>Is Claimed?</label>
    <type>Checkbox</type>
</CustomField>