force-app/main/default/objects/Account/fields/LanguagesSupported__c.field-meta.xml
<CustomField>
    <fullName>LanguagesSupported__c</fullName>
    <label>Languages Supported</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>Spanish</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>