force-app/main/default/objects/Account/fields/LegalStatus__c.field-meta.xml
<CustomField>
    <fullName>LegalStatus__c</fullName>
    <description>Legal Status of Organization</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Legal Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>