force-app/main/default/objects/Account/fields/MailingZipExtension__c.field-meta.xml
<CustomField>
    <fullName>MailingZipExtension__c</fullName>
    <description>Zip Code for Mailing Address</description>
    <label>MailingZipExtension</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>