force-app/main/default/objects/Account/fields/OrganizationUniqueId__c.field-meta.xml
<CustomField>
    <fullName>OrganizationUniqueId__c</fullName>
    <description>OrganizationUniqueId</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>OrganizationUniqueId</label>
    <length>60</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>