force-app/main/default/objects/Account/fields/OrgEnddate__c.field-meta.xml
<CustomField>
    <fullName>OrgEnddate__c</fullName>
    <description>Endate of Organization. Consider records with &apos;Null&apos; or date greater than current date.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Org End date</label>
    <type>Date</type>
</CustomField>