force-app/main/default/objects/Account/fields/POC_Email__c.field-meta.xml
<CustomField>
    <fullName>POC_Email__c</fullName>
    <description>The email address of the Point of Contact of the account</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>POC_Email</label>
    <type>Email</type>
</CustomField>