force-app/main/default/objects/Account/fields/POC_Name__c.field-meta.xml
<CustomField>
    <fullName>POC_Name__c</fullName>
    <description>The name of the point of contact for the account</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>POC Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>